text color change

--- a/style.css
+++ b/style.css
@@ -229,6 +229,6 @@ body {
     width: 100%;
     text-align: center;
     font-size: 1em;
-    color: white;
+    color: black;
     font-family: 'Pacifico', cursive;
 }
